--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>The Band</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="fonts/themify-icons/themify-icons.css">
     <link rel="icon" href="favicon.ico">
 </head>
@@ -13,7 +14,7 @@
             <ul class="navbar">
                 <li><a href="#">HOME</a></li>
                 <li><a href="#tour">TOUR</a></li>
-                <li><a href="#band">BAND</a></li>
+                <li><a href="#band">BAND</a></li> 
                 <li><a href="#contact">CONTACT</a></li>
                 <li>
                     <a href="#">
@@ -103,7 +104,7 @@
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
                                 <a href="#" class="place-buy-btn">Buy Tickets</a>
                             </div>  
-                        </div>                    
+                        </div>                     
                     </div>
                 </div>
             </div>
